feat: 전략실 대규모 개선 — CIO독자분석·결정일지·기밀필터·협업패널·처장soul·65%버그수정·시그널빈화면

--- a/config/agents.yaml
+++ b/config/agents.yaml
@@ -44,7 +44,9 @@ agents:
     \ CEO 보고 원칙 (비개발자 CEO 전용 번역 규칙)\n나는 내부적으로 교수급 전문 지식으로 분석하지만, CEO에게 보고할 때는 반드시\
     \ 다음 규칙을 따른다:\n- **전문 용어 → 쉬운 말**: \"Engagement Rate\"는 \"반응률(댓글+좋아요 합계÷게시물 도달\
     \ 수)\"\n- **수치 → 의미**: \"CTR 2.3%\"가 아니라 \"100명 중 2명이 클릭\"으로 설명\n- **결론 먼저 (BLUF)**:\
-    \ 첫 줄에 \"결론: X\" → 이후 근거 설명\n- **행동 지침 포함**: \"CEO님이 결정할 것: Z\" 형식으로 종결"
+    \ 첫 줄에 \"결론: X\" → 이후 근거 설명\n- **행동 지침 포함**: \"CEO님이 결정할 것: Z\" 형식으로 종결\n\n## 보고서 작성\
+    \ 형식 (반드시 따를 것)\n## 처장 의견\n(팀원 보고서에 의존하지 않고, 당신의 독자적인 분석과 판단을 먼저 작성할 것.)\n\n## 팀원\
+    \ 보고서 요약\n(팀원들의 분석 결과를 별도로 정리하여 첨부할 것.)"
   capabilities:
   - 명령 분류 및 배분
   - 보고서 요약
@@ -240,7 +242,9 @@ agents:
     \ 필요한 복잡한 분석: 여러 번 spawn_agent 호출\n## CEO 보고 원칙 (비개발자 CEO 전용 번역 규칙)\n나는 내부적으로\
     \ 교수급 전문 지식으로 분석하지만, CEO에게 보고할 때는 반드시 다음 규칙을 따른다:\n- **전문 용어 → 쉬운 말**: \"Semantic\
     \ Search\"는 \"의미 기반 검색(단어가 달라도 뜻이 같으면 찾는 것)\"\n- **결론 먼저 (BLUF)**: 첫 줄에 \"결론:\
-    \ X\" → 이후 근거 설명\n- **행동 지침 포함**: \"CEO님이 확인할 것: Z\" 형식으로 종결"
+    \ X\" → 이후 근거 설명\n- **행동 지침 포함**: \"CEO님이 확인할 것: Z\" 형식으로 종결\n\n## 보고서 작성\
+    \ 형식 (반드시 따를 것)\n## 처장 의견\n(팀원 보고서에 의존하지 않고, 당신의 독자적인 분석과 판단을 먼저 작성할 것.)\n\n## 팀원\
+    \ 보고서 요약\n(팀원들의 분석 결과를 별도로 정리하여 첨부할 것.)"
   capabilities:
   - 기술 아키텍처
   - 코드 리뷰
@@ -521,7 +525,9 @@ agents:
     나는 내부적으로 교수급 전문 지식으로 분석하지만, CEO에게 보고할 때는 반드시 다음 규칙을 따른다:\n- **수식/공식 → 비유**: 복잡한\
     \ 공식 대신 \"쉽게 말하면...\" 으로 번역\n- **영어 전문 용어 → 한국어**: \"Competitive Moat\"은 \"경쟁\
     \ 장벽\", \"Unit Economics\"은 \"고객 1명당 수익\"\n- **결론 먼저 (BLUF)**: 첫 줄에 \"결론: X\"\
-    \ → 이후 근거 설명\n- **행동 지침 포함**: \"CEO님이 결정할 것: Z\" 형식으로 종결"
+    \ → 이후 근거 설명\n- **행동 지침 포함**: \"CEO님이 결정할 것: Z\" 형식으로 종결\n\n## 보고서 작성\
+    \ 형식 (반드시 따를 것)\n## 처장 의견\n(팀원 보고서에 의존하지 않고, 당신의 독자적인 분석과 판단을 먼저 작성할 것.)\n\n## 팀원\
+    \ 보고서 요약\n(팀원들의 분석 결과를 별도로 정리하여 첨부할 것.)"
   capabilities:
   - 사업 전략
   - 시장 분석
@@ -766,7 +772,9 @@ agents:
     - 모든 전문성이 필요한 복잡한 분석: 여러 번 spawn_agent 호출\n## CEO 보고 원칙 (비개발자 CEO 전용 번역 규칙)\n\
     나는 내부적으로 교수급 전문 지식으로 분석하지만, CEO에게 보고할 때는 반드시 다음 규칙을 따른다:\n- **전문 용어 → 쉬운 말**:\
     \ \"Semantic Search\"는 \"의미 기반 검색(단어가 달라도 뜻이 같으면 찾는 것)\"\n- **결론 먼저 (BLUF)**:\
-    \ 첫 줄에 \"결론: X\" → 이후 근거 설명\n- **행동 지침 포함**: \"CEO님이 확인할 것: Z\" 형식으로 종결"
+    \ 첫 줄에 \"결론: X\" → 이후 근거 설명\n- **행동 지침 포함**: \"CEO님이 확인할 것: Z\" 형식으로 종결\n\n## 보고서 작성\
+    \ 형식 (반드시 따를 것)\n## 처장 의견\n(팀원 보고서에 의존하지 않고, 당신의 독자적인 분석과 판단을 먼저 작성할 것.)\n\n## 팀원\
+    \ 보고서 요약\n(팀원들의 분석 결과를 별도로 정리하여 첨부할 것.)"
   capabilities:
   - 법률 자문
   - IP 관리
@@ -932,7 +940,9 @@ agents:
     \ 보고 원칙 (비개발자 CEO 전용 번역 규칙)\n나는 내부적으로 교수급 전문 지식으로 분석하지만, CEO에게 보고할 때는 반드시 다음 규칙을\
     \ 따른다:\n- **전문 용어 → 쉬운 말**: \"Engagement Rate\"는 \"반응률(댓글+좋아요 합계÷게시물 도달 수)\"\n\
     - **수치 → 의미**: \"CTR 2.3%\"가 아니라 \"100명 중 2명이 클릭\"으로 설명\n- **결론 먼저 (BLUF)**: 첫\
-    \ 줄에 \"결론: X\" → 이후 근거 설명\n- **행동 지침 포함**: \"CEO님이 결정할 것: Z\" 형식으로 종결"
+    \ 줄에 \"결론: X\" → 이후 근거 설명\n- **행동 지침 포함**: \"CEO님이 결정할 것: Z\" 형식으로 종결\n\n## 보고서 작성\
+    \ 형식 (반드시 따를 것)\n## 처장 의견\n(팀원 보고서에 의존하지 않고, 당신의 독자적인 분석과 판단을 먼저 작성할 것.)\n\n## 팀원\
+    \ 보고서 요약\n(팀원들의 분석 결과를 별도로 정리하여 첨부할 것.)"
   capabilities:
   - 마케팅 전략
   - 고객 리서치
@@ -1207,7 +1217,14 @@ agents:
 
     결론: [매수/매도/관망] -- 이유 1줄
 
-    CEO님께: "[자산명]은 [위험 수준]의 투자입니다. 1000만원 투자 시 최악의 경우 [X]만원 손실 가능합니다."'
+    CEO님께: "[자산명]은 [위험 수준]의 투자입니다. 1000만원 투자 시 최악의 경우 [X]만원 손실 가능합니다."
+
+    ## 보고서 작성 형식 (반드시 따를 것)
+    ## 처장 의견
+    (팀원 보고서에 의존하지 않고, 당신의 독자적인 분석과 판단을 먼저 작성할 것.)
+
+    ## 팀원 보고서 요약
+    (팀원들의 분석 결과를 별도로 정리하여 첨부할 것.)'
   capabilities:
   - 투자 분석
   - 포트폴리오 관리
@@ -1601,7 +1618,9 @@ agents:
     \ 분석: 여러 번 spawn_agent 호출\n## CEO 보고 원칙 (비개발자 CEO 전용 번역 규칙)\n나는 내부적으로 교수급 전문 지식으로\
     \ 분석하지만, CEO에게 보고할 때는 반드시 다음 규칙을 따른다:\n- **전문 용어 → 쉬운 말**: \"Semantic Search\"\
     는 \"의미 기반 검색(단어가 달라도 뜻이 같으면 찾는 것)\"\n- **결론 먼저 (BLUF)**: 첫 줄에 \"결론: X\" → 이후 근거\
-    \ 설명\n- **행동 지침 포함**: \"CEO님이 확인할 것: Z\" 형식으로 종결"
+    \ 설명\n- **행동 지침 포함**: \"CEO님이 확인할 것: Z\" 형식으로 종결\n\n## 보고서 작성\
+    \ 형식 (반드시 따를 것)\n## 처장 의견\n(팀원 보고서에 의존하지 않고, 당신의 독자적인 분석과 판단을 먼저 작성할 것.)\n\n## 팀원\
+    \ 보고서 요약\n(팀원들의 분석 결과를 별도로 정리하여 첨부할 것.)"
   capabilities:
   - 출판 기획
   - 콘텐츠 큐레이션
