fix: tools.yaml에 dart_api/insider_tracker/global_market_tool/notification_engine 파라미터 스키마 추가

--- a/config/tools.yaml
+++ b/config/tools.yaml
@@ -95,6 +95,23 @@ tools:
     name_ko: "DART 재무제표"
     description: "금융감독원 DART 기업 재무제표(매출/영업이익/순이익), 기업정보, 최신 공시 조회"
     model_name: "gpt-5-mini"
+    parameters:
+      type: object
+      properties:
+        action:
+          type: string
+          enum: ["financial", "company", "disclosure"]
+          description: "financial=재무제표 조회, company=기업정보, disclosure=최신 공시"
+        company:
+          type: string
+          description: "기업명 (예: 삼성전자, SK하이닉스, LG에너지솔루션)"
+        year:
+          type: string
+          description: "조회 연도 (예: 2024, 기본값: 2024)"
+        report_code:
+          type: string
+          description: "공시 유형 코드 (11011=사업보고서, 기본값: 11011)"
+      required: ["action", "company"]
 
   - tool_id: "naver_news"
     name: "Naver News Search"
@@ -219,6 +236,20 @@ tools:
     name_ko: "내부자 거래 추적기"
     description: "대주주/임원 자사주 매매 감지 — DART 임원·주요주주 소유보고 분석, 시장 전체 지분 변동 스캔"
     model_name: "gpt-5-mini"
+    parameters:
+      type: object
+      properties:
+        action:
+          type: string
+          enum: ["track", "scan", "alert"]
+          description: "track=특정기업 내부자거래 추적, scan=전체시장 스캔, alert=내부자 알림 설정"
+        company:
+          type: string
+          description: "기업명 (track 사용 시 필수, 예: 삼성전자)"
+        days:
+          type: integer
+          description: "조회 기간 일수 (기본값: 90)"
+      required: ["action"]
 
   - tool_id: "dividend_calendar"
     name: "Dividend Calendar"
@@ -425,12 +456,53 @@ tools:
     name_ko: "알림 엔진"
     description: "텔레그램·이메일로 자동 알림 발송 — 메시지/보고서 알림, 템플릿 발송, 이력 관리"
     model_name: "gpt-5-mini"
+    parameters:
+      type: object
+      properties:
+        action:
+          type: string
+          enum: ["send", "template", "history"]
+          description: "send=즉시 알림 발송, template=템플릿으로 발송, history=발송 이력 조회"
+        message:
+          type: string
+          description: "알림 메시지 내용 (send 사용 시 필수)"
+        channel:
+          type: string
+          enum: ["telegram", "email", "all"]
+          description: "발송 채널 (기본값: telegram)"
+        title:
+          type: string
+          description: "알림 제목 (선택)"
+        template_name:
+          type: string
+          description: "템플릿 이름 (template 사용 시 필수)"
+      required: ["action"]
 
   - tool_id: "global_market_tool"
     name: "Global Market Tool"
     name_ko: "글로벌 시장 도구"
     description: "글로벌 주식/지수/암호화폐/환율 조회 — 미국·일본·유럽 주식, 비트코인 시세, 환율"
     model_name: "gpt-5-mini"
+    parameters:
+      type: object
+      properties:
+        action:
+          type: string
+          enum: ["stock", "index", "crypto", "forex", "compare"]
+          description: "stock=해외주식 조회, index=글로벌지수, crypto=암호화폐, forex=환율, compare=비교"
+        symbol:
+          type: string
+          description: "주식 심볼 (stock 사용 시 필수, 예: AAPL, TSLA, NVDA)"
+        indices:
+          type: string
+          description: "조회할 지수 목록 (index 사용 시, 예: SP500,NASDAQ,DOW)"
+        coins:
+          type: string
+          description: "암호화폐 목록 (crypto 사용 시, 기본값: bitcoin,ethereum)"
+        period:
+          type: string
+          description: "조회 기간 (compare 사용 시, 예: 1mo, 3mo, 1y)"
+      required: ["action"]
 
   - tool_id: "financial_calculator"
     name: "Financial Calculator"
