feat: QA Q1 critical 완화 + ECOS 분기버그 + OpenAI 스키마 재귀 수정 [완료]

--- a/config/quality_rules.yaml
+++ b/config/quality_rules.yaml
@@ -333,11 +333,11 @@ rubrics:
       - id: Q1
         label: "데이터 정확성"
         weight: 25
-        critical: true
+        critical: false
         criteria:
-          1: "종목코드/주가/재무제표 수치가 틀리거나, 존재하지 않는 지표를 인용. 'PER 5배' 같은 숫자가 실제와 크게 다름"
-          3: "핵심 수치는 맞으나, 시점이 오래되었거나 (예: 3분기 실적인데 1분기 데이터 사용) 일부 보조 지표가 부정확"
-          5: "종목코드/현재가/PER/PBR/ROE 등 핵심 재무지표가 최신 데이터(최소 최근 분기)와 일치. 데이터 시점 명시"
+          1: "종목코드/주가/재무제표 수치가 명백히 날조됨. 존재하지 않는 지표를 인용하거나, 도구 없이 수치를 지어냄"
+          3: "도구로 가져온 데이터를 사용했으나, 시점이 오래되었거나 일부 보조 지표의 해석이 부정확"
+          5: "도구(DART/KRX/ECOS 등)로 가져온 최신 데이터를 정확히 인용하고, 데이터 시점과 출처가 명시됨"
       - id: Q2
         label: "매수/매도 균형"
         weight: 20
