fix: workspace-profile 404 + 사이드바 에이전트 안 보임 + 대시보드 비용 격리
- workspaces.yaml: viewer 프로파일 추가 (빈 sidebarFilter)
- arm_server.py: workspace-profile 404 → viewer 폴백 반환
- arm_server.py: /api/dashboard에 orgScope 필터 추가 (누나 → 사주 에이전트 비용만)
- corthex-app.js: initWorkspace 토큰 없으면 스킵 (로그인 전 호출 방지)

--- a/config/workspaces.yaml
+++ b/config/workspaces.yaml
@@ -51,3 +51,15 @@ workspaces:
     showBulkModel: false
     showSatisfaction: false
     allowedDivisions: [saju]   # 사주 탭만
+
+  viewer:
+    label: "로그인 필요"
+    color: "hq-muted"
+    showBuildNumber: false
+    officeLayout: []
+    sidebarFilter: ""          # 빈 문자열 = 아무 에이전트도 안 보임
+    mentionFilter: ""
+    orgScope: null
+    showBulkModel: false
+    showSatisfaction: false
+    allowedDivisions: []
