feat: v5.2 showSections 탭 격리 + CLAUDE.md 모범사례 재구축
## 변경사항

### v5.2 showSections 탭 격리
- config/workspaces.yaml: showSections 필드 추가 (ceo=[], sister=[home,command,performance])
- web/static/js/corthex-app.js: getPrimaryTabs/getSecondaryTabs에 _tabAllowed() 필터 추가
  → 누나는 대시보드/명령센터/전력분석 3개 탭만 접근

### CLAUDE.md 모범사례 재구축 (공식 Claude Code best practices 기반)
- CLAUDE.md: @import 문법 추가, 실서버 검증 명령 구체화, 자율 실행 모드 섹션
- .claude/agents/log-analyzer.md: 서버 로그 분석 전문 재사용 에이전트 (Haiku)
- .claude/agents/security-reviewer.md: CORTHEX 규칙 위반 감지 에이전트 (Sonnet)
- .claude/rules/frontend.md: 프론트엔드 경로별 자동 적용 규칙
- .claude/rules/backend.md: 백엔드 경로별 자동 적용 규칙

--- a/config/workspaces.yaml
+++ b/config/workspaces.yaml
@@ -34,6 +34,7 @@ workspaces:
     showBulkModel: true        # 전체 에이전트 모델 일괄 변경 섹션 표시
     showSatisfaction: true     # CEO 만족도 카드 표시
     allowedDivisions: []       # 빈 배열 = 기밀문서/정보국 전체 탭 허용
+    showSections: []           # 빈 배열 = 모든 탭 허용 (CEO는 전체 접근)
 
   sister:
     label: "사주냥 관제"
@@ -51,6 +52,7 @@ workspaces:
     showBulkModel: false
     showSatisfaction: false
     allowedDivisions: [saju]   # 사주 탭만
+    showSections: [home, command, performance]  # 대시보드 / 명령센터 / 전력분석만
 
   viewer:
     label: "로그인 필요"
