--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,7 +119,7 @@ jobs:
             SVCEOF
               sudo systemctl daemon-reload
               sudo systemctl enable corthex
-              # nginx 기본 설정
+              # nginx 기본 설정 (corthex-hq.com)
               sudo tee /etc/nginx/sites-available/default > /dev/null <<NGXEOF
             server {
                 listen 80 default_server;
@@ -184,6 +184,58 @@ jobs:
               sudo sh -c 'iptables-save > /etc/iptables/rules.v4'
               echo "✅ 방화벽 포트 80, 443, 8000 열림"
               echo "✅ 새 서버 초기 설정 완료"
+            fi
+
+            # 0-v2단계: v2 플랫폼 인프라 기반 설정 (처음 한 번만)
+            if ! command -v node &>/dev/null || ! node --version | grep -q "v2[0-9]"; then
+              echo "🟦 Node.js 20 LTS 설치 중... (v2 플랫폼용)"
+              curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
+              sudo apt-get install -y nodejs
+              sudo npm install -g pm2
+              echo "✅ Node.js $(node --version) + pm2 설치 완료"
+            else
+              echo "✅ Node.js $(node --version) 이미 설치됨"
+            fi
+
+            # v2 nginx 서버 블록 (v2.corthex-hq.com → 포트 3000)
+            if [ ! -f /etc/nginx/sites-available/corthex-v2 ]; then
+              echo "🟦 v2 nginx 서버 블록 생성 중..."
+              sudo tee /etc/nginx/sites-available/corthex-v2 > /dev/null <<V2NGXEOF
+            server {
+                listen 80;
+                server_name v2.corthex-hq.com;
+
+                location / {
+                    proxy_pass http://127.0.0.1:3000;
+                    proxy_http_version 1.1;
+                    proxy_set_header Upgrade \$http_upgrade;
+                    proxy_set_header Connection "upgrade";
+                    proxy_set_header Host \$host;
+                    proxy_set_header X-Real-IP \$remote_addr;
+                    proxy_read_timeout 600s;
+                }
+            }
+            V2NGXEOF
+              sudo ln -sf /etc/nginx/sites-available/corthex-v2 /etc/nginx/sites-enabled/corthex-v2
+              sudo nginx -t && sudo systemctl reload nginx
+              echo "✅ v2.corthex-hq.com nginx 블록 생성 완료 (포트 3000)"
+            else
+              echo "✅ v2 nginx 블록 이미 존재"
+            fi
+
+            # v2 디렉토리 + placeholder (앱 배포 전까지 준비용)
+            if [ ! -d /home/ubuntu/CORTHEX_V2 ]; then
+              echo "🟦 v2 플랫폼 디렉토리 준비 중..."
+              mkdir -p /home/ubuntu/CORTHEX_V2
+              cat > /home/ubuntu/CORTHEX_V2/placeholder.js << 'PLACEHOLDER'
+            const http = require('http');
+            const server = http.createServer((req, res) => {
+              res.writeHead(200, { 'Content-Type': 'text/html; charset=utf-8' });
+              res.end('<h1>🚧 CORTHEX v2 준비 중</h1><p>곧 오픈합니다.</p>');
+            });
+            server.listen(3000, () => console.log('v2 placeholder 실행 중 (포트 3000)'));
+            PLACEHOLDER
+              echo "✅ v2 디렉토리 + placeholder 생성 완료"
             fi
 
             # 0.5단계: 방화벽 확인 (매 배포 시)
